crates/macros/src/snapshots/rstest_insta_macros__codegen__tests__context_binding__expand__when_fn_contains_ctx_arg.snap
---
source: crates/macros/src/codegen.rs
expression: "test_helpers::pretty(expanded)"
---
#[::rstest::rstest]
fn my_test(a: usize, #[context] toto: Context) {
    let __rstest_insta__suffix = toto
        .description
        .map(|s| s.to_string())
        .unwrap_or(toto.case.unwrap_or(0).to_string());
    ::insta::with_settings!(
        { snapshot_suffix => __rstest_insta__suffix }, { { println!("Hello, World!") } }
    )
}
